# euler-files

./: .gitignore  README.md  pyproject.toml
src/euler_files/: __init__.py  __main__.py  cli.py  config.py  congruency.py  constants.py  lock.py  markers.py  migrate.py  push.py  rsync.py  shell.py  status.py  sync.py  wizard.py
src/euler_files/apptainer/: __init__.py  build.py  deffile.py  fixup.py  prune.py  sync.py  venv.py  wizard.py
tests/: conftest.py  test_apptainer_build.py  test_apptainer_config.py  test_apptainer_deffile.py  test_apptainer_fixup.py  test_apptainer_prune.py  test_apptainer_sync.py  test_apptainer_venv.py  test_cli_integration.py  test_config.py  test_congruency.py  test_lock.py  test_migrate.py  test_sync.py
